# Pharmapy_Howard

./: .gitignore  0312_pilot.py  0421_parameter_estimation_acetaminophen.py  0421_process_optimization_acetaminophen.py  Parameter_estimation.py  README.md  acetaminophen_data_323k.csv  acetaminophen_data_343k.csv  acetaminophen_data_353k.csv  acetaminophen_pure_components_ziegler.json  acetaminophen_ziegler_conc_init.json  log0325.txt  log0420.txt  log_0312.txt  new.py  newnew.py  parameter_estimation_acetaminophen.py  process_optimization_acetaminophen.py  pure_components_pilot.json  pyproject.toml
stage1_results/: stage1_summary.csv
